dicts/scripts/gt_dictionary.css
@charset "utf-8";
@import "../../../tools/xxe/gtdict-config/gt_dictionary_XXE.css";

/* The following rules are not working in XML Editor (XXE), but
   are working fine in modern browsers. We keep them here, and
   make a separate configuration file for XXE, where these rules
   are not included. The CSS in the configuration file is imported
   above, and thus shared between the browsers and XXE.

   That is: ONLY ADD HERE THINGS THAT ARE UNSUPPORTED IN XXE!
   All other CSS styling should be added to the shared CSS file
   in the XXE configuration. */

sourcenote {
    border-bottom: 1px inset gray;
}

a { display: inline;
    cursor: pointer; /* cursor isn't supported in XMLEditor */
    cursor: hand; }

e:nth-child(even) {background-color: #eee}
e:nth-child(odd)  {border: none}

l:after {
    text-transform: capitalize;
}

/* The neg. margin is needed to cancel out whitespace (newlines,
indents) that is collapsed to a single space character, even in
cases like this where we don't want any space at all. */
wordform + wordform:before {
    margin-left: -.3em;
}

e > mg:only-of-type:before {content: none; content:''; }
e > mg:only-of-type {
    display: inline;
    margin-bottom: 0;
    margin-left: 0;
}
e > lg + mg:only-of-type {
    display: inline;
}

/* tg + t styling: */
tg + tg, t + t, tf + t, t + tf {
    margin-left: -.3em;
}
t:after {
    text-transform: capitalize;
}

/* xg, x, xt styling: */
e > lg ~ mg xg {
    display: block;
    margin-bottom: 0.2ex;
    margin-left: 1.33ex;
}
e > lg ~ mg xg:before {
    display: block;
    color: gray;
    font-size: small;
    content: "Usage example:";
}

xg + xg:before {
    margin-left: -.3em;
}

